# zfsGangster

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/fsgangster/: Dev.c  Fsgangster.h  Makefile  zfs.c  zfs.h
lib/fsgangster/utills/: structConverter.c
lib/zfsgangster/: Dev.c  ubervlock.c  vdev.c  zfs.c
lib/zfsgangster/include/: byteswap.h  nvpair.h  uberblock.h  vdev.h  zio.h
lib/zfsgangster/include/os/freebsd/spl/sys/: byteorder.h  condvar.h  kstat.h  list.h  mutex.h  proc.h  rwlock.h
lib/zfsgangster/include/os/linux/spl/sys/: time.h
lib/zfsgangster/include/sys/: avl.h  dmu.h  kstat.h  nvpair.h  range_tree.h  spa.h  spa_checksum.h  space_map.h  txg.h  types.h  vdev.h  vdev_indirect_births.h  vdev_indirect_mapping.h  vdev_rebuild.h  zfs_context.h  zfs_ratelimit.h  zio_priority.h
lib/zfsgangster/include/sys/fs/: zfs.h
lib/zfsgangster/lib/libspl/: assert.c
lib/zfsgangster/lib/libspl/include/: assert.h  atomic.h  umem.h
lib/zfsgangster/module/: nvpair.c  uberblock.c  zio.c
lib/zfsgangster/utills/: structConverter.c  structConverter.h
scripts/: zfs_mount.sh  zfs_unmount.sh
src/: main.c
